Fixed mobile view

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             background-color: #0A0A0F;
             color: white;
         }
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+        img, video, svg {
+            max-width: 100%;
+            height: auto;
+        }
         .font-serif-logo {
             font-family: 'Cormorant Garamond', serif;
         }
